--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <img src="images/Batteribrueder.svg" alt="bb-logo" class="bb-logo">
-  <h1>Batterie Brüder</h1>
-  <p>Dies ist der Batterie Shop von den Batterie Brüdern.</p>
+  <h1>Battery Brothers</h1>
+  <p>Dies ist der Batterien Shop von den Battery Brothers.</p>
   <p>Wir stellen seit 2022 die tollsten Batterien her und das in 3 Varianten.</p>
 
 <hr/>
