--- a/index.html
+++ b/index.html
@@ -36,13 +36,23 @@
 <hr/>
 
 <h3>Login & Registration</h3>
-<form>
-  <label for="email">Email:</label><br/>
-  <input type="text" id="email" name="email"><br/>
-  <label for="pw">Passwort:</label><br/>
-  <input type="text" id="pw" name="pw"><br/>
-  <input type="submit" value="Login">
-</form>
+<div class="container">
+  <div class="login-form">
+    <form>
+      <label for="email">Email:</label><br/>
+      <input type="text" id="email" name="email"><br/>
+      <label for="pw">Passwort:</label><br/>
+      <input type="text" id="pw" name="pw"><br/>
+      <input type="submit" value="Login">
+    </form>
+  </div>
+  
+  <div class="oder">oder</div>
+
+  <div class="register-link">
+    <a href="/">Registrieren</a>
+  </div>
+</div>
 
 <hr/>
 <a href="/" class="big-button">Warenkorb</a>
